# raptor

./: .gitignore  Cargo.toml  README.md
lib/: lib.rs
lib/analysis/: argument_identification.rs  constants.rs  dead_code_elimination.rs  def_use.rs  lattice.rs  location_set.rs  mod.rs  parameter_identification.rs  reaching_definitions.rs  stack_buffers.rs  stack_pointer_offsets.rs  transient_assignments.rs  use_def.rs  variable_use_def.rs
lib/analysis/detect_call_information/: block_state.rs  call_site.rs  call_type.rs  mod.rs  return_site.rs  tagged_constant.rs
lib/analysis/fixed_point/: mod.rs  weighted_location.rs
lib/analysis/ksets/: jump_table_analysis.rs  kset.rs  kset_value.rs  mod.rs
lib/analysis/strided_intervals/: interval.rs  mod.rs  strided_interval.rs  value.rs
lib/data/: functions.rs  mod.rs  types.rs
lib/features/: mod.rs  xrefs.rs
lib/ir/: block.rs  call.rs  control_flow_graph.rs  dereference.rs  edge.rs  expression.rs  function.rs  instruction.rs  location.rs  lvalue.rs  mod.rs  operation.rs  program.rs  reference.rs  rvalue.rs  scalar.rs  stack_pointer.rs  stack_variable.rs  variable.rs
lib/modules/: mod.rs
lib/solver/: fast.rs  mod.rs
lib/translator/: calls.rs  function_translator.rs  mod.rs  program_translator.rs  translation_information.rs
