[package]
name = "raptor"
version = "0.4.4"
homepage = "https://github.com/falconre/raptor"
repository = "https://github.com/falconre/raptor"
description = "Higher-level semantics over Falcon IL"
readme = "README.md"
license = "Apache 2.0"

[dependencies]
error-chain = "0.12"
falcon = {version="0.4.4", features=["thread_safe"]}
falcon-z3 = {version="0.4.4"}
goblin = "0.0.17"
lazy_static = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[lib]
name = "raptor"
path = "lib/lib.rs"