[package]
name = "falcon-raptor"
version = "0.4.7"
homepage = "https://github.com/falconre/raptor"
repository = "https://github.com/falconre/raptor"
description = "Higher-level semantics over Falcon IL"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
error-chain = "0.12"
falcon = {version="0.4.9", features=["thread_safe"]}
falcon-z3 = {version="0.4.5"}
goblin = "0.1.3"
lazy_static = "1.0"
log = "0.4"
serde = {version="1.0", features=["derive"]}

[features]
capstone4 = ["falcon/capstone4"]

[lib]
name = "raptor"
path = "lib/lib.rs"